<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hayvanları Seviyorum</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Şifre</string>
    <string name="title_login">Hesabına giriş yap</string>
    <string name="content_description_jumpingchild">Zıplayan çocuk ve köpek resmi.</string>
    <string name="text_forgot_password">Şifremi unuttum!</string>
    <string name="button_text_login">Giriş yap</string>
    <string name="text_or">veya</string>
    <string name="button_text_sign_up">Kayıt Ol</string>
    <string name="text_already_have_an_account">Zaten bir hesabım var.</string>
    <string name="hint_confirm_password">Tekrar Şifre</string>
    <string name="hint_phone_number">Telefon Numarası</string>
    <string name="hint_fullName">Ad - Soyad</string>
    <string name="text_register_now">Hemen kayıt ol</string>
    <string name="text_advertisement">İlanlar</string>
    <string name="text_charity_score">Sıralama</string>
    <string name="text_profile">Profil</string>
    <string name="text_map">Harita</string>
    <string name="content_description_back_button">Geri Dönmek</string>
    <string name="text_search_ad">İlan Ara</string>
    <string name="text_category">Kategori</string>
    <string name="content_description_end_icon">Sağ Buton</string>
    <string name="content_description_start_icon">Sol Buton</string>
    <string name="content_description_notification">Bildirimler</string>
    <string name="text_address" tools:ignore="Typos">Adres</string>
    <string name="text_adopt">Sahiplendirme</string>
    <string name="text_feed_support">Mama Desteği</string>
    <string name="text_injured">Yaralı</string>
    <string name="text_all">Tümü</string>
    <string name="content_desc_add_ad_button">Yeni ilan ekleme butonu</string>
    <string name="content_desc_vet_button">Veteriner sayfası butonu</string>
    <string name="content_desc_guide_button">Acil yardım rehberi butonu</string>
    <string name="content_desc_op_button">İşlemler butonu</string>
    <string name="content_desc_add_image">Resim ekle</string>
    <string name="text_add_image">Resim ekle</string>
    <string name="text_enter_description">Açıklama Giriniz</string>
    <string name="label_description">Açıklama</string>
    <string name="text_enter_title">Başlık Giriniz</string>
    <string name="label_title">Başlık</string>
    <string name="text_enter_category">Kategori Seçiniz</string>
    <string name="label_category">Kategori</string>
    <string name="label_address" tools:ignore="Typos">Adres</string>
    <string name="text_enter_address" tools:ignore="Typos">Adres giriniz</string>
    <string name="text_posted_advertisement">Paylaşılan</string>
    <string name="text_edit_profile">Profili Düzenle</string>
    <string name="text_see_all"><![CDATA[Hepsini Gör >]]></string>
    <string name="text_advertisements">İlanlar</string>
    <string name="text_posted_completed">Tamamlanan</string>
    <string name="content_desc_drag_handle">Drag handle</string>
    <string name="text_take_picture_with_camera">Fotoğraf Çek</string>
    <string name="text_pick_image_from_gallery">Galeriden Seç</string>
    <string name="text_button_create">Oluştur</string>
    <string name="content_desc_delete_captured_image">Çekilen resmi sil</string>

    <string name="button_text_save">Kaydet</string>
    <string name="button_text_continue">Devam</string>
    <string name="title_selected_address" tools:ignore="Typos">Seçilen Adres</string>
    <string name="title_confirm_advertisement">İlanı Onayla</string>
    <string name="content_desc_images">İlan Resmi</string>

    <string name="text_advertisement_completed">Tamamlandı</string>
    <string name="text_advertisement_not_completed">Bekliyor</string>
    <string name="btn_text_help">Yardım Et</string>
    <string name="btn_find_vet">Veteriner Bul</string>
    <string name="text_button_edit">Düzenle</string>
    <string name="text_button_delete">Sil</string>
    <string name="title_comments">Yorumlar</string>
    <string name="text_comments_empty_state">Henüz bir yorum yapılmadı.</string>
    <string name="button_post_comment">Yorum gönderme butonu</string>
    <string name="content_desc_button_show_comments">Yorumları göster butonu</string>
    <string name="content_desc_location_icon">Konum ikonu</string>

    <string name="text_add_photo">Fotoğraf Ekle</string>
    <string name="text_helping_approved">Onaylandı</string>
    <string name="text_helping_denied">Reddedildi</string>
    <string name="btn_text_check">Kontrol Et</string>
    <string name="btn_text_complete">Tamamla</string>
    <string name="text_answer">Cevap</string>
    <string name="text_click_for_upload_image">Resim yüklemek için tıklayınız</string>
    <string name="text_search_not_found">Herhangi bir sonuç bulunamadı!</string>
    <string name="text_try_again_to_look_for_new_ads">Başka ilanlar aramak istiyorsan tekrar dene!</string>
    <string name="content_desc_no_result_image">Sonuç yok</string>
    <string name="text_no_advertisements_found">İlan bulunamadı!</string>
    <string name="text_no_advertisement_found_near">Bulunduğun konuma yakin bir ilan bulunamadı.</string>
    <string name="text_charity_score_table">Yardımseverlik Tablosu</string>
    <string name="text_your_rank">Sıralaman:\n#%1$s %2$s</string>
    <string name="text_successfully_added">Başarılı bir şekilde eklendi!</string>
    <string name="text_permission_denied">İzin reddedildi!</string>
    <string name="text_first_aid_guide_title">İlk Yardım Rehberi</string>
    <string name="text_what_should_i_do">Ne yapabilirim?</string>
    <string name="text_directions">Yol tarifi</string>
    <string name="text_nearby_vet_clinic_not_found">Yakınlarında herhangi bir veteriner klinik bulunamadı!</string>
    <string name="text_ambulance_available">Ambulans mevcut</string>
    <string name="text_no_ambulance_available">Ambulans mevcut değil</string>
    <string name="btn_text_call">Ara</string>
</resources>