<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_48dp"
    tools:context=".ui.createadvertisement.CreateAdvertisementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.suatzengin.iloveanimals.core.ui.topbar.IlaTopBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftIcon="@drawable/ic_back"
            app:title="Yeni ilan ekle" />

        <TextView
            android:id="@+id/tv_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:text="@string/label_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/text_enter_category"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/label_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/text_enter_title"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/label_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="start"
            android:hint="@string/text_enter_description"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/label_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="start"
            android:hint="@string/text_enter_address"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingVertical="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_16dp"
            android:paddingEnd="@dimen/padding_16dp"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/layout_select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/bg_select_image"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_desc_add_image"
                android:src="@drawable/ic_select_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add_image"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>