<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/bg_item_category_not_selected"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingVertical="@dimen/padding_8dp"
            android:text="@string/text_all"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_injured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/bg_item_category_not_selected"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingVertical="@dimen/padding_8dp"
            android:text="@string/text_injured"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_feed_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/bg_item_category_not_selected"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingVertical="@dimen/padding_8dp"
            android:text="@string/text_feed_support"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_adopt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/bg_item_category_not_selected"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingVertical="@dimen/padding_8dp"
            android:text="@string/text_adopt"
            android:textColor="@color/black" />
    </LinearLayout>
</HorizontalScrollView>
