<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottom_sheet"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/content_desc_drag_handle"
        android:src="@drawable/ic_drag_handle_view" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/title_comments" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_empty_state"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_8dp"
            android:alpha="0.4"
            android:drawablePadding="@dimen/padding_4dp"
            android:gravity="center"
            android:text="@string/text_comments_empty_state"
            app:drawableTopCompat="@drawable/ic_no_comment" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.suatzengin.iloveanimals.core.ui.IlaEditText
            android:id="@+id/et_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_12dp"
            android:layout_weight="1"
            app:hint="Yorum yaz.."
            app:startIcon="@drawable/ic_comment_balloon" />

        <ImageView
            android:id="@+id/btn_post_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_post_comment"
            android:src="@drawable/ic_send" />
    </LinearLayout>
</LinearLayout>